{
    "name": "MagicInputAction",
    "maps": [
        {
            "name": "Magic",
            "id": "e6715a10-86f5-4853-9803-ef5e6733b477",
            "actions": [
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "cf0441f4-e434-457b-8301-f8b6b6ffcd78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "590e0428-3dcc-4cec-b98f-f282ae567269",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill3",
                    "type": "Button",
                    "id": "66d43927-d422-45af-9da0-e80ae1b702fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill4",
                    "type": "Button",
                    "id": "e75ad948-6a4d-49ba-b486-99d8b0f636b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "86da8ced-5574-4234-ad7e-04d90a980178",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ea88949-d5e9-472c-a58a-4c0d0225ca65",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3125cdc-0600-44a9-90eb-88450a824f34",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0432f627-361d-4341-81a1-9f8f73971dae",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}